change code width to avoid horizontal scrolling close #15

--- a/docs/style.css
+++ b/docs/style.css
@@ -8,6 +8,7 @@ p code {
 pre {
   word-break: normal;
   word-wrap: normal;
+  font-size: 75%;
 }
 pre code {
   white-space: inherit;
